--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsnd --respawn --transpile-only --inspect -- src/server.ts"
+    "start:dev": "tsnd --respawn --transpile-only --inspect -- src/server.ts"
   },
   "keywords": [],
   "author": "",
